// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditFoodFormForCurrentLog
    editCurrentEditLog={[Function]}
    editFoodFromCurrentLog={[Function]}
    food={
        Object {
            "amount": 100,
            "base": Object {
              "amount": 100,
              "calories": 165,
              "carbohydrates": 0,
              "fat": 3.6,
              "protein": 31,
            },
            "calories": 165,
            "carbohydrates": 0,
            "createdAt": 1000,
            "fat": 3.6,
            "id": "2",
            "name": "Chicken Breast",
            "protein": 31,
            "timesUsed": 1,
            "unit": "grams",
          }
    }
    index={1}
    removeFoodFromCurrentLog={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "food": Object {
        "amount": 100,
        "base": Object {
          "amount": 100,
          "calories": 165,
          "carbohydrates": 0,
          "fat": 3.6,
          "protein": 31,
        },
        "calories": 165,
        "carbohydrates": 0,
        "createdAt": 1000,
        "fat": 3.6,
        "id": "2",
        "name": "Chicken Breast",
        "protein": 31,
        "timesUsed": 1,
        "unit": "grams",
      },
      "handleSubmit": [Function],
      "onExit": [Function],
      "onRemove": [Function],
      "title": "Edit Food",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "food": Object {
          "amount": 100,
          "base": Object {
            "amount": 100,
            "calories": 165,
            "carbohydrates": 0,
            "fat": 3.6,
            "protein": 31,
          },
          "calories": 165,
          "carbohydrates": 0,
          "createdAt": 1000,
          "fat": 3.6,
          "id": "2",
          "name": "Chicken Breast",
          "protein": 31,
          "timesUsed": 1,
          "unit": "grams",
        },
        "handleSubmit": [Function],
        "onExit": [Function],
        "onRemove": [Function],
        "title": "Edit Food",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should render warning if no food to be edited 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditFoodFormForCurrentLog
    editCurrentEditLog={[Function]}
    editFoodFromCurrentLog={[Function]}
    food={undefined}
    index={undefined}
    removeFoodFromCurrentLog={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Select from List above to Edit Item",
      "className": "center-text margin-bottom-small",
    },
    "ref": null,
    "rendered": "Select from List above to Edit Item",
    "type": "p",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Select from List above to Edit Item",
        "className": "center-text margin-bottom-small",
      },
      "ref": null,
      "rendered": "Select from List above to Edit Item",
      "type": "p",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
